test/Neg/termina/var_assignment/test3.fin
function init_val (array : &[u8;6]) -> u8 {
    (*array)[3] = 0 : u8;
    return 0 : u8;
}

